# f4l-workflow

./: .env.example  01_spec.md  README.md  bom.csv  docker-compose.yml  drc.json  erc.json  workflow.yaml
.forgejo/workflows/: e2e-happy.yml  e2e-impl-fail.yml  e2e-ship-fail.yml  e2e-spec-fail.yml  evidence-pack.yml
.gitea/workflows/: e2e-compliance-fork.yml  evidence-pack.yml  gate-advance.yml
cli/: .gitignore  pyproject.toml
cli/f4l_cli/: client.py  main.py
cli/f4l_cli/commands/: gate.py  intake.py  status.py
cli/tests/: test_cli.py
cockpit/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
cockpit/src/: App.tsx  api.ts  styles.css
cockpit/src/components/: IntakeForm.tsx  TokenBar.tsx
cockpit/src/views/: DeliverableDetail.tsx  DeliverablesList.tsx
engine/: Dockerfile  package-lock.json  package.json  tsconfig.json
engine/src/: forgejo-client.ts  grist-client.ts  intake-normalizer.ts  life-core-client.test.ts  life-core-client.ts  metrics.ts  server.ts  state-machine.ts
engine/src/handlers/: transition-impl.test.ts  transition-impl.ts
engine/src/middleware/: require-write.ts
engine/src/routes/: artifacts.ts  deliverables.ts  gate.ts  intake.ts
engine/src/webhooks/: forgejo.ts  grist.ts
engine/test/: gate-route.test.ts  grist-client.test.ts  intake-normalizer.test.ts  require-write.test.ts  state-machine.test.ts  webhooks-grist.test.ts
schemas/: grist-tables.json
templates/workflows/: embedded.yml
