[project]
name = "f4l-cli"
version = "0.1.0"
description = "Factory 4 Life workflow CLI (f4l intake, status, gate advance)"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "respx>=0.21",
]

[project.scripts]
f4l = "f4l_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["f4l_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
